@@ -16,7 +16,6 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.zip.ZipOutputStream;
@@ -26,7 +25,7 @@ import java.util.zip.ZipOutputStream;
 public class IndexFileService {
     public Page<String> getIndexContent(Pageable pageable, String siteId, String index) throws IOException {
         List<String> list = new ArrayList<>();
-        Path file = Paths.get("/data/index", siteId, index + ".txt");
+        Path file = Utils.getIndexPath(siteId, index + ".txt");
         if (!Files.exists(file)) {
             return new PageImpl<>(list);
         }
@@ -50,7 +49,7 @@ public class IndexFileService {
         if (index < 0) {
             throw new BadRequestException("行数不正确");
         }
-        Path file = Paths.get("/data/index", siteId, indexName + ".txt");
+        Path file = Utils.getIndexPath(siteId, indexName + ".txt");
         if (!Files.exists(file)) {
             throw new BadRequestException("索引文件不存在");
         }
@@ -84,7 +83,7 @@ public class IndexFileService {
     }
 
     public void uploadIndexFile(String siteId, String indexName, MultipartFile file) throws IOException {
-        Path temp = Paths.get("/tmp/index.txt");
+        Path temp = Path.of("/tmp/index.txt");
         try {
             FileUtils.copyToFile(file.getInputStream(), temp.toFile());
             List<String> lines = Files.readAllLines(temp);
@@ -93,7 +92,7 @@ public class IndexFileService {
             }
 
             lines = lines.stream().map(e -> e.startsWith("./") ? e.substring(1) : e).toList();
-            Path path = Paths.get("/data/index", siteId, indexName + ".txt");
+            Path path = Utils.getIndexPath(siteId, indexName + ".txt");
             if (!Files.exists(path)) {
                 Files.createDirectories(path.getParent());
                 Files.createFile(path);
@@ -110,7 +109,7 @@ public class IndexFileService {
     }
 
     public void deleteIndexFile(String siteId, String indexName) throws IOException {
-        Path path = Paths.get("/data/index", siteId, indexName + ".txt");
+        Path path = Utils.getIndexPath(siteId, indexName + ".txt");
         Files.delete(path);
     }
 }
