@@ -1,5 +1,8 @@
 package cn.har01d.alist_tvbox.service;
 
+import cn.har01d.alist_tvbox.util.Utils;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -16,7 +19,6 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.zip.ZipEntry;
@@ -25,6 +27,28 @@ import java.util.zip.ZipOutputStream;
 @Slf4j
 @Service
 public class LogsService {
+    private final ObjectMapper objectMapper;
+
+    private String aListLogPath = "/opt/alist/log/alist.log";
+
+    public LogsService(ObjectMapper objectMapper) {
+        this.objectMapper = objectMapper;
+        readAListLogPath();
+    }
+
+    public void readAListLogPath() {
+        Path path = Path.of("/opt/alist/data/config.json");
+        if (Files.exists(path)) {
+            try {
+                String text = Files.readString(path);
+                JsonNode json = objectMapper.readTree(text);
+                aListLogPath = json.get("log").get("name").asText();
+                log.info("AList log path: {}", aListLogPath);
+            } catch (IOException e) {
+                log.warn("read AList config failed", e);
+            }
+        }
+    }
 
     private String fixLine(String text) {
         return text
@@ -41,11 +65,11 @@ public class LogsService {
 
     private Path getLogFile(String type) {
         if ("alist".equals(type)) {
-            return Paths.get("/opt/alist/log/alist.log");
+            return Path.of(aListLogPath);
         } else if ("init".equals(type)) {
-            return Paths.get("/data/log/init.log");
+            return Utils.getLogPath("init.log");
         } else {
-            return Paths.get("/data/log/app.log");
+            return Utils.getLogPath("app.log");
         }
     }
 
@@ -116,7 +140,7 @@ public class LogsService {
     }
 
     public FileSystemResource downloadLog() throws IOException {
-        File file = new File("/opt/alist/log/alist.log");
+        File file = new File(aListLogPath);
         if (file.exists()) {
             FileUtils.copyFileToDirectory(file, new File("/opt/atv/log/"));
         }
